--- a/.config/systemd/user/swaybg.service
+++ b/.config/systemd/user/swaybg.service
@@ -10,6 +10,8 @@ ExecStart=/usr/bin/swaybg -o '*' -i /home/payton/Pictures/Wallpapers/blackandwhi
 Restart=on-failure
 
 ; Run these lines
+; mkdir -p ~/.config/systemd/user/niri.service.wants
+; ln -s ~/.config/systemd/user/swaybg.service ~/.config/systemd/user/niri.service.wants/
 ; systemctl --user daemon-reload
 ; systemctl --user restart swaybg.service
 ; systemctl --user status swaybg.service
